--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,8 @@ camera-camera2 = { module = "androidx.camera:camera-camera2", version = "1.5.0-a
 camera-core = { module = "androidx.camera:camera-core", version = "1.5.0-alpha05" }
 camera-view = { module = "androidx.camera:camera-view", version = "1.5.0-alpha05" }
 camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version = "1.5.0-alpha05"}
-camera-video = { module = "androidx.camera:camera-video", version = "1.5.0-alpha05"}
 camera-extensions = { module = "androidx.camera:camera-extensions", version = "1.5.0-alpha05"}
-scanner = { module = "com.google.mlkit:barcode-scanning", version = "17.3.0" }
+scanner = { module = "com.journeyapps:zxing-android-embedded", version = "4.3.0" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
