Set up navigation | set up zip creation | set up confirmations | set up ability to add more barcodes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.ZMA"
         >
         <activity
-            android:name=".MainActivity"
+            android:name=".CameraActivity"
             android:exported="true"
             android:theme="@style/Theme.ZMA">
             <intent-filter>
@@ -27,7 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CameraActivity" />
     </application>
 
 </manifest>
