--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ camera-view = { module = "androidx.camera:camera-view", version = "1.5.0-alpha05
 camera-lifecycle = { module = "androidx.camera:camera-lifecycle", version = "1.5.0-alpha05"}
 camera-extensions = { module = "androidx.camera:camera-extensions", version = "1.5.0-alpha05"}
 scanner = { module = "com.journeyapps:zxing-android-embedded", version = "4.3.0" }
+ok-http = { module = "com.squareup.okhttp3:okhttp", version = "4.12.0" }
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
